--- a/index.html
+++ b/index.html
@@ -29,23 +29,50 @@
             </nav>
             <div class="login-wrapper d-flex align-items-center">
                 <div class="language-wrapper d-flex align-items-center">
-                    <img src="images/flag.png" alt="flag">
+                    <img src="images/flag.png" alt="flag" width="25px">
                     <span>EL</span>
 
-                    <a href="#"><img src="images/arrow.png" alt="arrow"></a>
+                    <a href="#"><img src="images/arrow.png" alt="arrow" width="8px"></a>
                 </div>
                 <div  class="signup-btn">
                     <a href="#">sign up</a>
                 </div>
-                <div  class="login-btn d-flex align-items-center justify-content-center">
-
-                    <a href="#"><img src="images/user.png">login</a>
+                <div  class="login-btn  align-items-center justify-content-center">
+                    <a href="#"><img src="images/user.png" width="25px">login</a>
+                </div>
+                <div class="burger-icon">
+                    <img src="images/Burger.png" alt="burger menu icon" width="26px" >
                 </div>
             </div>
         </div>
     </header>
     <main class="">
-        <img src="images/background.png" alt="background" class="background">
+        <div class="form-wrapper">
+            <h2>Create Your Account</h2>
+            <p class="form-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <label for="name">First Name</label>
+                <input type="text" id="name" name="name" placeholder="John" required>
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Johndoe@gmail.com" required>
+
+                <label for="country" class="d-block">Password</label>
+                <div class="password-wrapper d-inline-flex w-100">
+                    <input type="password" id="password" class="wrong" name="password" placeholder="" required>
+                    <div class="icon-password">
+                        <img src="images/password-icon.png" alt="" width="24px">
+                    </div>
+                </div>
+                <div class="pt-2 pb-2">
+                    <img src="images/warning.png" alt="warning icon" width="20px">
+                    <span class="warning-massage">Passwords Does Not Match! </span>
+                </div>
+                <span></span>
+                
+
+                <input type="submit" value="Sign Up">
+            </form>
+        </div>
     </main>
 </body>
 </html>
