--- a/index.html
+++ b/index.html
@@ -56,21 +56,31 @@
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="Johndoe@gmail.com" required>
 
-                <label for="country" class="d-block">Password</label>
+                <label for="password" class="d-block">Password</label>
                 <div class="password-wrapper d-inline-flex w-100">
                     <input type="password" id="password" class="wrong" name="password" placeholder="" required>
                     <div class="icon-password">
                         <img src="images/password-icon.png" alt="" width="24px">
                     </div>
                 </div>
-                <div class="pt-2 pb-2">
+                <label for="password" class="d-block">Confirm Password</label>
+                <div class="password-wrapper d-inline-flex w-100">
+                    <input type="password" id="password" class="right" name="password" placeholder="" required>
+                    <div class="icon-password">
+                        <img src="images/password-icon.png" alt="" width="24px">
+                    </div>
+                </div>
+                <div class="warning-wrapper pt-3 pb-3">
                     <img src="images/warning.png" alt="warning icon" width="20px">
                     <span class="warning-massage">Passwords Does Not Match! </span>
                 </div>
-                <span></span>
+                <div class="check-wrapper">
+                    <img src="images/check.png" width="18px" alt="check icon">
+                    <span >I agree to the <a>Terms and conditions</a>  and <a>Privacy Policy</a>  </span>
+                </div>
                 
 
-                <input type="submit" value="Sign Up">
+                <input type="submit" class="submit" value="Sign Up">
             </form>
         </div>
     </main>
