--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
                     <img src="images/check.png" width="18px" alt="check icon">
                     <span >I agree to the <a>Terms and conditions</a>  and <a>Privacy Policy</a>  </span>
                 </div>
-                
+                <div class="checkbox d-flex justify-content-between">
+                    <div>
+                        <input type="checkbox">
+                        <span>I'm not a robot</span>
+                    </div>
+                    <div><img src="images/reCAPTCHA.png" alt="reCAPTCHA icon" width="66px"></div>
+                </div>
 
                 <input type="submit" class="submit" value="Sign Up">
             </form>
