--- a/index.html
+++ b/index.html
@@ -79,15 +79,19 @@
                     <span >I agree to the <a>Terms and conditions</a>  and <a>Privacy Policy</a>  </span>
                 </div>
                 <div class="checkbox d-flex justify-content-between">
-                    <div>
+                    <div class="d-inline-flex align-items-center">
                         <input type="checkbox">
-                        <span>I'm not a robot</span>
+                        <img src="images/I’m not a robot.png" class="ps-3" alt="" width="88px" height="10px">
                     </div>
                     <div><img src="images/reCAPTCHA.png" alt="reCAPTCHA icon" width="66px"></div>
                 </div>
-
                 <input type="submit" class="submit" value="Sign Up">
             </form>
+            <div class="d-inline-flex align-items-center">
+                <div class="line"></div>
+                <div class="devider">or sign up with</div>
+                <div class="line"></div>
+            </div>
         </div>
     </main>
 </body>
