--- a/index.html
+++ b/index.html
@@ -87,10 +87,24 @@
                 </div>
                 <input type="submit" class="submit" value="Sign Up">
             </form>
-            <div class="d-inline-flex align-items-center">
+            <div class=" pb-2 d-inline-flex align-items-center">
                 <div class="line"></div>
                 <div class="devider">or sign up with</div>
                 <div class="line"></div>
+            </div>
+            <div class="d-flex justify-content-between">
+                <div class="facebook-box">
+                    <img src="images/facebook.png" alt="facebook icon" width="24px">
+                </div>
+                <div class="google-box">
+                    <img src="images/google.png" alt="google icon" width="24px">
+                </div>
+                <div class="apple-box">
+                    <img src="images/apple.png" alt="apple icon" width="24px">
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mt-5">
+                <span class="login-question">Already have an account?<a class="login-link">Login</a></span>
             </div>
         </div>
     </main>
