--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </div>
         </div>
     </header>
-    <main class="">
-        <div class="form-wrapper">
+    <main>
+        <div class="form-wrapper col-11">
             <h2>Create Your Account</h2>
             <p class="form-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                 <label for="name">First Name</label>
@@ -74,8 +74,8 @@
                     <img src="images/warning.png" alt="warning icon" width="20px">
                     <span class="warning-massage">Passwords Does Not Match! </span>
                 </div>
-                <div class="check-wrapper">
-                    <img src="images/check.png" width="18px" alt="check icon">
+                <div class="check-wrapper d-inline-flex">
+                    <img src="images/check.png" class="pe-3 "  height="18px" alt="check icon">
                     <span >I agree to the <a>Terms and conditions</a>  and <a>Privacy Policy</a>  </span>
                 </div>
                 <div class="checkbox d-flex justify-content-between">
@@ -87,10 +87,10 @@
                 </div>
                 <input type="submit" class="submit" value="Sign Up">
             </form>
-            <div class=" pb-2 d-inline-flex align-items-center">
-                <div class="line"></div>
-                <div class="devider">or sign up with</div>
-                <div class="line"></div>
+            <div class="pb-2 d-inline-flex align-items-center justify-content-between">
+                <div class="line col-4"></div>
+                <span class="devider col-4">or sign up with</span>
+                <div class="line col-4"></div>
             </div>
             <div class="d-flex justify-content-between">
                 <div class="facebook-box">
