--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <div class="form-wrapper col-11">
             <h2>Create Your Account</h2>
             <p class="form-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            <form>
                 <label for="name">First Name</label>
                 <input type="text" id="name" name="name" placeholder="John" required>
 
@@ -74,6 +75,19 @@
                     <img src="images/warning.png" alt="warning icon" width="20px">
                     <span class="warning-massage">Passwords Does Not Match! </span>
                 </div>
+                <div class="requirements-wrapper">
+                    <div class="d-flex justify-content-between align-items-center">
+                         <h3>Default password requirements:</h3>
+                        <img src="images/arrow2.png" width="15px" alt="">
+                    </div>
+                   
+                    <ul>
+                        <li>Must be at least 8 characters long</li>
+                        <li>Must include at least one English uppercase character (A —Z)</li>
+                        <li>Must include at least one English lowercase character (a — 2)</li>
+                        <li>Must include at least one numeric character (0— 9)</li>
+                    </ul>
+                </div>
                 <div class="check-wrapper d-inline-flex">
                     <img src="images/check.png" class="pe-3 "  height="18px" alt="check icon">
                     <span >I agree to the <a>Terms and conditions</a>  and <a>Privacy Policy</a>  </span>
@@ -87,19 +101,19 @@
                 </div>
                 <input type="submit" class="submit" value="Sign Up">
             </form>
-            <div class="pb-2 d-inline-flex align-items-center justify-content-between">
+            <div class="pb-2 d-flex align-items-center justify-content-between">
                 <div class="line col-4"></div>
                 <span class="devider col-4">or sign up with</span>
                 <div class="line col-4"></div>
             </div>
             <div class="d-flex justify-content-between">
-                <div class="facebook-box">
+                <div class="facebook-box col-3">
                     <img src="images/facebook.png" alt="facebook icon" width="24px">
                 </div>
-                <div class="google-box">
+                <div class="google-box col-3">
                     <img src="images/google.png" alt="google icon" width="24px">
                 </div>
-                <div class="apple-box">
+                <div class="apple-box col-3">
                     <img src="images/apple.png" alt="apple icon" width="24px">
                 </div>
             </div>
