--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
                     </div>
                    
                     <ul>
-                        <li>Must be at least 8 characters long</li>
-                        <li>Must include at least one English uppercase character (A —Z)</li>
-                        <li>Must include at least one English lowercase character (a — 2)</li>
-                        <li>Must include at least one numeric character (0— 9)</li>
+
+                        <img src="images/check-full.png" width="10px" class="d-inline" alt="arrow icon"><li class="d-inline">Must be at least 8 characters long</li><br>
+                        <img src="images/check-full.png" width="10px" class="d-inline" alt="arrow icon"><li class="d-inline">Must include at least one English uppercase character (A —Z)</li><br>
+                        <img src="images/check-2.png" width="10px" class="d-inline" alt="arrow icon"><li class="d-inline">Must include at least one English lowercase character (a — 2)</li><br>
+                        <img src="images/Ellipse 7.png" width="3px" class="d-inline ms-1 me-3" alt="arrow icon"><li class="d-inline">Must include at least one numeric character (0— 9)</li>
                     </ul>
                 </div>
                 <div class="check-wrapper d-inline-flex">
