--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="Johndoe@gmail.com" required>
 
-                <label for="password" class="d-block">Password</label>
+                <label for="password" class="d-inline-flex me-2 ">Password</label>
+                <img src="images/check3.png" width="15px" alt="">
                 <div class="password-wrapper d-inline-flex w-100">
                     <input type="password" id="password" class="wrong" name="password" placeholder="" required>
                     <div class="icon-password">
